[project]
name = "leanbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fduxiao", email = "9294979+fduxiao@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
