[project]
name = "leanbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fduxiao", email = "9294979+fduxiao@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "mistletoe>=1.4.0",
    "pygments>=2.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.11.8",
]


[project.scripts]
leanbook = "leanbook.cli:main"
